--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,5 @@
-astroid==2.3.3
-autopep8==1.5.1
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.1
-colorama==0.4.3
-Flask==1.1.2
-future==0.18.2
-geojson==2.5.0
-httplib2==0.18.1
-idna==2.9
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-line-bot-sdk==1.16.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-numpy==1.19.1
-oauth2==1.9.0.post1
-pandas==1.1.0
-pycodestyle==2.5.0
-pylint==2.4.4
-pyowm==3.0.0
-PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.23.0
-six==1.14.0
-urllib3==1.25.9
-Werkzeug==1.0.1
-wrapt==1.11.2
+line-bot-sdk
+flask
+pyowm==2.10.0
+pandas
+lxml
